--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <div class="filter website">
                                     <img src="assets/images/Jealife Portfolio.png" alt="">
                                     <div class="link-portfolio">
-                                        <a href="https://tirem-t.vercel.app/"  target="_blank"> JEaLiFe</a>
+                                        <a href="https://jea-portfolio.vercel.app/"  target="_blank"> JEaLiFe</a>
                                     </div>
                                 </div>
                                 <div class="filter pictures">
@@ -169,15 +169,26 @@
                                 <div class="filter website">
                                     <img src="assets/images/Flexfit.png" alt="">
                                     <div class="link-portfolio">
-                                        <a href="https://tirem-t.vercel.app/"  target="_blank"> FlexFit</a>
+                                        <a href="https://flex-fit-tau.vercel.app/"  target="_blank"> FlexFit</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                 </section>
-
+                   <!-- contact section -->
                 <section class="section-contact">
+                    <div class="contact-information">
+                        
+                    </div>
 
+                    <form action="https://getform.io/f/68f68a45-9882-47da-a9af-6d71d6234021" method="POST">
+                        <input type="text" name="name">
+                        <input type="email" name="email">
+                        <input type="text" name="message">
+                        <!-- add hidden Honeypot input to prevent spams -->
+                        <input type="hidden" name="_gotcha" style="display:none !important">
+                        <button type="submit">Send</button>
+                    </form>
                 </section>
             </main>
 
