--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="container main-projects grid">
-                <div class="slideshow-container main-projects1">
+                <div class="main-projects1">
 
                     <div class="text">
                         <span>
