--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
         </section>
         <!-- contact section -->
-        <section class="section-contact section container">
+        <section class="section-contact section container" id="contact">
             <div class="contact-information">
                 <h3>JEaLiFe</h3>
                 <h2 class="section-about-title"> Contact Me</h2>
