On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   assets/css/index.css
	modified:   assets/css/responsive.css
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
 
                 <div class="skills socials ">
                     <!-- Socilal -->
-                    <i class='bx bxs-envelope'></i>
-                    <i class='bx bxl-instagram-alt'></i>
-                    <i class='bx bxl-github'></i>
+                    <a href="mailto:jealife.pictures@gmail.com"><i class='bx bxs-envelope'></i></a>          
+                    <a href="http://instagram.com/jealife_pictures"><i class='bx bxl-instagram-alt'></i></a>
+                    <a href="https://github.com/jealife"><i class='bx bxl-github'></i></a>
 
                 </div>
 
@@ -200,15 +200,15 @@
             <form action="https://submit-form.com/Q6PX1HC6">
                 <div class="name">
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" placeholder="Name" required="" />
+                    <input type="text" id="name" name="name" aria-required="true" placeholder="Name" required="" />
                 </div>
                 <div class="email">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Email" required="" />
+                    <input type="email" id="email" name="email" aria-required="true" placeholder="Email" required="" />
                 </div>
                 <div class="message">
                     <label for="message">Message</label>
-                    <textarea id="message" name="message" placeholder="Message" required=""></textarea>
+                    <textarea id="message" name="message" aria-required="true" placeholder="Message" required=""></textarea>
                 </div>
                 <div class="btn-form">
 
