--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     ullam laborum commodi, nemo cum veritatis
                     repudiandae.
                 </p>
-                <a href="#" download class="button">
+                <a href="assets/images/JEaLiFe·Pictures (126).jpg" download class="button">
                     Download CV <i class='bx bx-cloud-download'></i>
                 </a>
             </div>
