--- a/index.html
+++ b/index.html
@@ -217,6 +217,22 @@
             </form>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer-container sectionntainer">
+            
+            <div class="footer-logo"><i class='bx bx-code'></i></div>
+            <div class="socials ">
+                <!-- Socilal -->
+                <a href="mailto:jealife.pictures@gmail.com"><i class='bx bxs-envelope'></i></a>          
+                <a href="http://instagram.com/jealife_pictures"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://github.com/jealife"><i class='bx bxl-github'></i></a>
+
+            </div>
+
+            <div class="copy-right">&copy; Jean Guylane, 2023.</div>
+
+        </div>
+    </footer>
 
     <script>
         filterSelection("all")
