--- a/index.html
+++ b/index.html
@@ -102,15 +102,7 @@
             </div>
             <div class="section-about-right">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing
-                    elit. Dolore quibusdam architecto fugiat repudiandae
-                    quos totam culpa, consectetur nihil vel autem vitae
-                    molestiae aperiam nisi nam quasi debitis nesciunt
-                    sunt dignissimos cupiditate! Officia explicabo eum
-                    dolor sed repellendus quis velit ex. Nemo
-                    repudiandae nostrum similique magni eum aut,
-                    nesciunt, labore soluta itaque iusto vel repellat
-                    corporis.
+                    Je suis Jean Guylane, développeur web et mobile avec 3 ans d'expérience et passionné de photographie. J'aime créer des interfaces interactives en utilisant HTML, CSS, JavaScript et les frameworks tels que React et Angular. Mon objectif est de combiner mes compétences en développement et ma passion pour la photographie pour créer des projets uniques. Contactez-moi pour discuter de collaborations passionnantes
                 </p>
             </div>
         </section>
