--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -31,10 +31,10 @@
     <header class="header">
         <nav class="nav n container">
             <div class="nav-menu">
-                <a href="#home" class="nav-link">Home</a>
-                <a href="#about" class="nav-link">About</a>
+                <a href="#home" class="nav-link">Accueil</a>
+                <a href="#about" class="nav-link">A propos</a>
                 <div class="nav-logo"><i class='bx bx-code'></i></div>
-                <a href="#work" class="nav-link">Work</a>
+                <a href="#work" class="nav-link">Réalisations</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
         </nav>
@@ -46,14 +46,11 @@
         <section class="section section-hero container-dark " id="home">
             <div class="section-hero-top">
                 <h1 class="section--big-title">
-                    Hello World! I'm Jean<span class="dot">•</span>
-                    <br>Nice to meet you
+                    Pour des projets Unique<span class="dot">•</span>
+                    <br>Et originals
                 </h1>
                 <p class="text-bg-dark">
-                    Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. <br> Quisquam molestiae dolores velit nulla
-                    ullam laborum commodi, nemo cum veritatis
-                    repudiandae.
+                    Jea suis Jean <br> Je vous invite à parcourir mes réalisation entre Déveoppement web et Photographie
                 </p>
                 <a href="assets/images/JEaLiFe·Pictures (126).jpg" download class="button">
                     Download CV <i class='bx bx-cloud-download'></i>
@@ -65,7 +62,7 @@
                 <div class="main-projects2">
                     <div class="text">
                         <span>
-                            Web developer
+                            Projets Web
                         </span>
                     </div>
                 </div>
@@ -73,7 +70,7 @@
 
                     <div class="text">
                         <span>
-                            Photographer
+                            Photographies
                         </span>
                     </div>
 
@@ -86,8 +83,8 @@
         <!-- about section -->
         <section class="section-about section container grid" id="about">
             <div class="section-about-left">
-                <h3>Photographer - Web developper</h3>
-                <h2 class="section-about-title"> About me</h2>
+                <h3>Photographe -Dévéloppeur web</h3>
+                <h2 class="section-about-title"> A propos de moi</h2>
                 <img src="https://jealife-portfolio.vercel.app/assets/images/JEaLiFe%C2%B7.jpg"
                     alt="Jean Guylane Memiaghe">
 
@@ -102,7 +99,11 @@
             </div>
             <div class="section-about-right">
                 <p>
-                    Je suis Jean Guylane, développeur web et mobile avec 3 ans d'expérience et passionné de photographie. J'aime créer des interfaces interactives en utilisant HTML, CSS, JavaScript et les frameworks tels que React et Angular. Mon objectif est de combiner mes compétences en développement et ma passion pour la photographie pour créer des projets uniques. Contactez-moi pour discuter de collaborations passionnantes
+                    Je suis Jean Guylane, développeur web et mobile avec 3 ans d'expérience et passionné de
+                    photographie. J'aime créer des interfaces interactives en utilisant HTML, CSS, JavaScript et les
+                    frameworks tels que React et Angular. Mon objectif est de combiner mes compétences en développement
+                    et ma passion pour la photographie pour créer des projets uniques. Contactez-moi pour discuter de
+                    collaborations passionnantes
                 </p>
             </div>
         </section>
@@ -111,22 +112,20 @@
         <section class="section-work section container-dark" id="work">
             <div class="section-work-top">
                 <h1 class="section--big-title">
-                    My work<span class="dot">•</span>
+                    Mes réalistaions<span class="dot">•</span>
 
                 </h1>
                 <p class="text-bg-dark">
-                    Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit.
+                    Voici quelques unes de mes réalisations et prises dont je suis particulièrement fier.
                 </p>
             </div>
 
             <div id="portfolio" class="portfolio">
                 <div id="btnFilter">
-                    <button class="btn active" onclick="filterSelection('all')"> All</button>
+                    <button class="btn active" onclick="filterSelection('all')"> Tout</button>
                     <button class="btn" onclick="filterSelection('pictures')">
-                        Pictures</button>
-                    <button class="btn" onclick="filterSelection('website')"> Web
-                        site</button>
+                        Photographies</button>
+                    <button class="btn" onclick="filterSelection('website')">Sites web</button>
                 </div>
 
                 <div class="container">
@@ -181,7 +180,7 @@
 
                 <div class="skills socials ">
                     <!-- Socilal -->
-                    <a href="mailto:jealife.pictures@gmail.com"><i class='bx bxs-envelope'></i></a>          
+                    <a href="mailto:jealife.pictures@gmail.com"><i class='bx bxs-envelope'></i></a>
                     <a href="http://instagram.com/jealife_pictures"><i class='bx bxl-instagram-alt'></i></a>
                     <a href="https://github.com/jealife"><i class='bx bxl-github'></i></a>
 
@@ -191,8 +190,8 @@
 
             <form action="https://submit-form.com/Q6PX1HC6">
                 <div class="name">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" aria-required="true" placeholder="Name" required="" />
+                    <label for="name">Nom</label>
+                    <input type="text" id="name" name="name" aria-required="true" placeholder="Nom" required="" />
                 </div>
                 <div class="email">
                     <label for="email">Email</label>
@@ -200,22 +199,23 @@
                 </div>
                 <div class="message">
                     <label for="message">Message</label>
-                    <textarea id="message" name="message" aria-required="true" placeholder="Message" required=""></textarea>
+                    <textarea id="message" name="message" aria-required="true" placeholder="Message"
+                        required=""></textarea>
                 </div>
                 <div class="btn-form">
 
-                    <button type="submit">Send</button>
+                    <button type="submit">Envoyer</button>
                 </div>
             </form>
         </section>
     </main>
     <footer class="footer">
         <div class="footer-container sectionntainer">
-            
+
             <div class="footer-logo"><i class='bx bx-code'></i></div>
             <div class="socials ">
                 <!-- Socilal -->
-                <a href="mailto:jealife.pictures@gmail.com"><i class='bx bxs-envelope'></i></a>          
+                <a href="mailto:jealife.pictures@gmail.com"><i class='bx bxs-envelope'></i></a>
                 <a href="http://instagram.com/jealife_pictures"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://github.com/jealife"><i class='bx bxl-github'></i></a>
 
