--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <header class="header">
         <nav class="nav n container">
             <div class="nav-menu">
-                <a href="#home" class="nav-link">Accueil</a>
-                <a href="#about" class="nav-link">A propos</a>
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#about" class="nav-link">About</a>
                 <div class="nav-logo"><i class='bx bx-code'></i></div>
-                <a href="#work" class="nav-link">Réalisations</a>
+                <a href="#work" class="nav-link">Work</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
         </nav>
@@ -50,7 +50,7 @@
                     <br>Et originals
                 </h1>
                 <p class="text-bg-dark">
-                    Jea suis Jean <br> Je vous invite à parcourir mes réalisation entre Déveoppement web et Photographie
+                    Je suis Jean <br> Je vous invite à parcourir mes réalisation entre Déveoppement web et Photographie
                 </p>
                 <a href="assets/images/JEaLiFe·Pictures (126).jpg" download class="button">
                     Download CV <i class='bx bx-cloud-download'></i>
