--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <section class="section-contact section container" id="contact">
             <div class="contact-information">
                 <h3>JEaLiFe</h3>
-                <h2 class="section-about-title"> Contact Me</h2>
+                <h2 class="section-about-title"> Contactez moi</h2>
                 <img src="https://jealife-portfolio.vercel.app/assets/images/JEaLiFe%C2%B7.jpg"
                     alt="Jean Guylane Memiaghe">
 
