--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <br>Et originals
                 </h1>
                 <p class="text-bg-dark">
-                    Je suis Jean <br> Je vous invite à parcourir mes réalisation entre Déveoppement web et Photographie
+                    Je suis Jean <br> Je vous invite à parcourir mes réalisations entre Développement web et photographie.
                 </p>
                 <a href="assets/images/JEaLiFe·Pictures (126).jpg" download class="button">
                     Download CV <i class='bx bx-cloud-download'></i>
@@ -103,7 +103,7 @@
                     photographie. J'aime créer des interfaces interactives en utilisant HTML, CSS, JavaScript et les
                     frameworks tels que React et Angular. Mon objectif est de combiner mes compétences en développement
                     et ma passion pour la photographie pour créer des projets uniques. Contactez-moi pour discuter de
-                    collaborations passionnantes
+                    collaborations passionnantes.
                 </p>
             </div>
         </section>
