--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="text-bg-dark">
                     Je suis Jean <br> Je vous invite à parcourir mes réalisations entre Développement web et photographie.
                 </p>
-                <a href="assets/images/CV.pdf" download class="button">
+                <a href="assets/CV.pdf" download class="button">
                     Download CV <i class='bx bx-cloud-download'></i>
                 </a>
             </div>
