--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -105,6 +106,49 @@
                     et ma passion pour la photographie pour créer des projets uniques. Contactez-moi pour discuter de
                     collaborations passionnantes.
                 </p>
+            </div>
+            
+        </section>
+
+        <section class="section">
+            <div class="exerience">
+                <div class="max experience">
+                    <h2 class="title txt-link section-about-title">
+                        Exprériences
+                    </h2>
+                    <div class="timeline">
+                        <div class="container-tilmeline left" data-aos="zoom-in-left" data-aos-delay="300"
+                        data-aos-duration="800" data-aos-easing="ease-in-out">
+                          <div class="content" >
+                            <h2>2023</h2>
+                            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                          </div>
+                        </div>
+                        <div class="container-tilmeline right" data-aos="zoom-in-right" data-aos-delay="300"
+                        data-aos-duration="800" data-aos-easing="ease-in-out">
+                          <div class="content">
+                            <h2>2022</h2>
+                            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                          </div>
+                        </div>
+                        <div class="container-tilmeline left" data-aos="zoom-in-left" data-aos-delay="300"
+                        data-aos-duration="800" data-aos-easing="ease-in-out">
+                            <div class="content" >
+                              <h2>2023</h2>
+                              <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                            </div>
+                          </div>
+                          <div class="container-tilmeline right"data-aos="zoom-in-right" data-aos-delay="300"
+                          data-aos-duration="800" data-aos-easing="ease-in-out">
+                            <div class="content"  >
+                              <h2>2022</h2>
+                              <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                            </div>
+                          </div>
+                        </div>
+                     </div>
+                      
+                </div>
             </div>
         </section>
 
@@ -273,7 +317,10 @@
 
 
     </script>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <!-- <script src="assets/js/main.js"></script> -->
 </body>
 
