--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                 </a>
 
-                <a href="" class="main-projects1">
+                <a href="https://gallery-grid-blush.vercel.app/" class="main-projects1">
 
                     <div class="text">
                         <span>
