--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="#home" class="nav-link">Accueil</a>
                 <a href="#about" class="nav-link">A propos</a>
                 <div class="nav-logo none"><i class='bx bx-code'></i></div>
-                <a href="#work" class="nav-link">Work</a>
+                <a href="#work" class="nav-link">Réalisation</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
         </nav>
