--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
     <header class="header">
         <nav class="nav n container">
             <div class="nav-logo none"><i class='bx bx-code'></i></div>
-            <div class="menu-icon none">
-                <i class='bx bx-menu-alt-right showMenu'></i>
-            </div>
+            
             <div class="nav-menu">
-                <a href="#home" class="nav-link">Accueil</a>
-                <a href="#about" class="nav-link">A propos</a>
-                <div class="nav-logo none"><i class='bx bx-code'></i></div>
-                <a href="#work" class="nav-link">Réalisation</a>
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#about" class="nav-link">About</a>
+                <div class="nav-logo"><i class='bx bx-code'></i></div>
+                <a href="#work" class="nav-link">Works</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
         </nav>
