--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content=" JEaLiFe's Portfolio">
+    <meta property="og:title" content=" Jean Guylane">
     <!-- Meta description -->
     <meta name="description"
         content="Salut, je suis Jean Développeur web et mobile et designer graphiste. Je fais aussi de la photographie...">
@@ -32,7 +32,7 @@
     <header class="header">
         <nav class="nav n container">
             <div class="nav-logo none"><i class='bx bx-code'></i></div>
-            
+
             <div class="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#about" class="nav-link">About</a>
@@ -69,7 +69,7 @@
             </div>
 
             <div class="container main-projects grid">
-                <a href="" class="main-projects2">
+                <a href="https://github.com/jealife" class="main-projects2">
                     <div class="text">
                         <span>
                             Projets Web
@@ -77,7 +77,7 @@
                     </div>
                 </a>
 
-                <a href="https://gallery-grid-blush.vercel.app/" class="main-projects1">
+                <a href="https://unsplash.com/fr/@jealife_pictures" class="main-projects1">
 
                     <div class="text">
                         <span>
@@ -94,8 +94,7 @@
             <div class="section-about-left">
                 <h3>Photographe -Dévéloppeur web</h3>
                 <h2 class="section-about-title"> A propos de moi</h2>
-                <img src="https://jealife-portfolio.vercel.app/assets/images/JEaLiFe%C2%B7.jpg"
-                    alt="Jean Guylane Memiaghe">
+                <img src="https://avatars.githubusercontent.com/u/83034287?v=4" alt="Jean Guylane Memiaghe">
 
                 <div class="skills ">
                     <!-- skills -->
@@ -109,7 +108,8 @@
             <div class="section-about-right">
                 <p>
                     Je suis Jean Guylane, développeur web et mobile avec 3 ans d'expérience et passionné de
-                    photographie. J'aime créer des interfaces interactives en utilisant HTML, CSS, JavaScript  Mon objectif est de combiner mes compétences en développement
+                    photographie. J'aime créer des interfaces interactives en utilisant Next JS. Mon objectif est de
+                    combiner mes compétences en développement
                     et ma passion pour la photographie pour créer des projets uniques. Contactez-moi pour discuter de
                     collaborations passionnantes.
                 </p>
@@ -127,39 +127,48 @@
                         <div class="container-tilmeline left" data-aos="zoom-in-left" data-aos-delay="300"
                             data-aos-duration="800" data-aos-easing="ease-in-out">
                             <div class="content">
-                                <h2>Aout 2022- Mars 2023</h2>
-                                <p>Developpeur web et graphiste au seins de l'académie de formation TOTAC académie à
-                                    Casabalca au Maroc.</p>
+                                <h2>Janvier 2024 - Aujourd'hui</h2>
+                                <p>Directeur & Fondateur de <a target="_blank" href="https://jealife.agency"> JEaLiFe
+                                        Agency</a> | Libreville, Gabon | <br>
+                                    <span style="font-size: 14px;">
+                                        Agence web digitale spécialisée dans la création de contenu visuel, branding,
+                                        photos et création de sites web vitrine.
+                                    </span>
+                                </p>
                             </div>
                         </div>
                         <div class="container-tilmeline right" data-aos="zoom-in-right" data-aos-delay="300"
                             data-aos-duration="800" data-aos-easing="ease-in-out">
                             <div class="content">
-                                <h2>Aout 2022-Septembre 2023</h2>
+                                <h2>Aout 2022 - Mars 2023</h2>
+                                <p>Developpeur web, graphiste et photographe au seins de l'académie de formation TOTAC
+                                    académie à
+                                    Casabalca au Maroc.</p>
+                            </div>
+                        </div>
+                        <div class="container-tilmeline left" data-aos="zoom-in-left" data-aos-delay="300"
+                            data-aos-duration="800" data-aos-easing="ease-in-out">
+                            <div class="content">
+                                <h2>Aout 2021-Septembre 2023</h2>
                                 <p>
                                     Community manager et Photographe au sein du restaurant Bambou d'Afrique à Casabalca
                                     au Maroc.
                                 </p>
                             </div>
                         </div>
-                        <!-- <div class="container-tilmeline left" data-aos="zoom-in-left" data-aos-delay="300"
-                        data-aos-duration="800" data-aos-easing="ease-in-out">
-                            <div class="content" >
-                              <h2>2023</h2>
-                              <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-                            </div>
-                          </div>
-                          <div class="container-tilmeline right"data-aos="zoom-in-right" data-aos-delay="300"
-                          data-aos-duration="800" data-aos-easing="ease-in-out">
-                            <div class="content"  >
-                              <h2>2022</h2>
-                              <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-                            </div>
-                          </div>
-                        </div> -->
+                        <!-- <div class="container-tilmeline right" data-aos="zoom-in-right" data-aos-delay="300"
+                            data-aos-duration="800" data-aos-easing="ease-in-out">
+                            <div class="content">
+                                <h2>2022</h2>
+                                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto
+                                    mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit
+                                    voluptua dignissim per, habeo iusto primis ea eam.</p>
+                            </div> -->
+                        </div>
                     </div>
-
                 </div>
+
+            </div>
             </div>
         </section>
 
@@ -230,8 +239,7 @@
             <div class="contact-information">
                 <h3>JEaLiFe</h3>
                 <h2 class="section-about-title"> Contactez moi</h2>
-                <img src="https://jealife-portfolio.vercel.app/assets/images/JEaLiFe%C2%B7.jpg"
-                    alt="Jean Guylane Memiaghe">
+                <img src="https://avatars.githubusercontent.com/u/83034287?v=4" alt="Jean Guylane Memiaghe">
 
                 <div class="skills socials ">
                     <!-- Socilal -->
