OG:Image Update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <!-- image mise en avant -->
     <meta property="og:image"
-        content="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1420&q=80">
+        content="https://avatars.githubusercontent.com/u/83034287?v=4">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="assets/icons/code.png">
     <title>Jean Guylane</title>
